# SentrySearch-CLI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-08-transnetv2-shot-detection.md
sentrysearch/: base_embedder.py  chunker.py  cli.py  doubao_embedder.py  embedder.py  gemini_embedder.py  labeler.py  local_embedder.py  qwen_embedder.py  qwen_reranker.py  qwen_storage.py  saas_client.py  search.py  shot_detector.py  store.py  trimmer.py
skills/index-shot-publish-saas/: SKILL.md
skills/index-shot-publish-saas/agents/: openai.yaml
skills/video-download/: SKILL.md
skills/video-download/agents/: openai.yaml
tests/: conftest.py  test_chunker.py  test_cli.py  test_doubao_embedder.py  test_embedder.py  test_local_embedder.py  test_qwen_embedder.py  test_qwen_reranker.py  test_qwen_storage.py  test_saas_client.py  test_search.py  test_shot_detector.py  test_store.py  test_trimmer.py
